# exercise

./: cond3.hs  conduitTest.hs  linker.rst  mytail.hs  trans.hs
algo/: eightqueen.hs  hanoi.hs  hanoi2.hs  nqueen.hs  prime.hs  queen.hs
cond/: Curl.hs  cond.cabal  proxy.hs  proxy2.hs
interview/data-structures/: UniqueString.hs
parsectest/: Main.hs  ip.hs  parsectest.cabal  test  test2
start_haskell/ch10/: ex7.hs
start_haskell/ch13/: ex9.lhs
