Name:                   cond
Version:                0.0.0
Author:                 Seizan Shimazaki
Maintainer:             Seizan Shimazaki
License:                BSD3
License-File:           LICENSE
Synopsis:               Exercise for Conduit
Description:            Exercise for Conduit
Category:               Web
Cabal-Version:          >= 1.8
Build-Type:             Simple
Executable cond
  Main-Is:              Curl.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , conduit
                      , network-conduit
                      , http-conduit
                      , attoparsec
                      , attoparsec-conduit
                      , mtl
                      , bytestring
                      , failure
                      , monad-control
                      , transformers
                      , lifted-base
  Other-Modules:        

Source-Repository head
  Type:                 git
  Location:             git://github.com/seizans/exercise/conduit
